# StalkerDroneRL

./: .clang-format  .clangd  CITATION.cff  DEVELOP.md  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
docker/: Dockerfile.dev
src/sdrl_bringup/: package.xml  setup.cfg  setup.py
src/sdrl_bringup/launch/: stalker_drone_launch.py  train_sac_launch.py
src/sdrl_bringup/rviz/: stalker_drone.rviz
src/sdrl_bringup/worlds/: ground_plane.world
src/sdrl_geometric_controller/: package.xml  setup.cfg  setup.py
src/sdrl_geometric_controller/sdrl_geometric_controller/: __init__.py  config.py  geometric_controller.py  motor_mixing.py  quadcopter_params.py  transform.py
src/sdrl_lionquadcopter/: CMakeLists.txt  package.xml
src/sdrl_lionquadcopter/include/sdrl_lionquadcopter/: lionquadcopter.h
src/sdrl_lionquadcopter/models/: lion_quadcopter.sdf
src/sdrl_lionquadcopter/models/x3_uav/: ATTRIBUTION  LICENSE-CC-BY-4.0.txt  model.config  model.sdf
src/sdrl_lionquadcopter/src/: lionquadcopter.cpp
src/sdrl_navigator/: package.xml  setup.cfg  setup.py
src/sdrl_navigator/launch/: navigator_launch.py
src/sdrl_navigator/sdrl_navigator/: gz_client.py  navigator.py
src/sdrl_object_mover/: package.xml  setup.cfg  setup.py
src/sdrl_object_mover/launch/: move_object_launch.py
src/sdrl_object_mover/models/: red_ball.sdf
src/sdrl_object_mover/sdrl_object_mover/: move_object.py
src/sdrl_perception/: package.xml  setup.cfg  setup.py
src/sdrl_perception/sdrl_perception/: __init__.py  perception.py
src/sdrl_rl_controller/: package.xml  setup.cfg  setup.py
src/sdrl_rl_controller/launch/: train_sac_launch.py
src/sdrl_rl_controller/sdrl_rl_controller/: __init__.py  observation_state_action.py  sac_controller.py  train_sac.py
