<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sdrl_bringup</name>
  <version>1.0.0</version>
  <description>Launch and visualization bringup for Stalker Drone.</description>
  <maintainer email="lionlai1989@gmail.com">Chih-An Lion Lai</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>launch_ros</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>xacro</depend>
  <depend>rviz2</depend>
  <depend>xterm</depend>
  <depend>imu_tools</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
