<?xml version="1.0"?>
<package format="3">
  <name>sdrl_lionquadcopter</name>
  <version>1.0.0</version>
  <description>Lion Quadcopter System Plugin</description>
  <maintainer email="lionlai1989@gmail.com">Chih-An Lion Lai</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>ros_gz_sim</depend>
  <depend>ros_gz_bridge</depend>
  <depend>sdformat14</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_srvs</depend>

  <exec_depend>gz-sim</exec_depend>
  <exec_depend>gz-math7</exec_depend>
  <exec_depend>gz-msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
